--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.opencv.android.CameraActivity"
-    >
+    tools:context="org.opencv.android.CameraActivity">
 
     <org.opencv.android.JavaCamera2View
         android:layout_width="match_parent"
@@ -15,8 +13,7 @@
         android:id="@+id/View"
         android:visibility="visible"
         opencv:camera_id="any"
-        opencv:show_fps="true"
-        />
+        opencv:show_fps="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,23 +21,32 @@
         android:orientation="vertical"
         android:layout_gravity="bottom"
         android:background="@color/cardview_light_background">
+
         <TextView
             android:id="@+id/counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Counter"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:layout_margin="10dp"
-            android:textColor="@color/black"
-            />
-       <TextView
-           android:id="@+id/usbDevice"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="@string/usbDevice"
-           android:textSize="20sp"
-           android:layout_margin="10dp"
-           android:textColor="@color/black"
-           />
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/usbStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="USB Status: "
+            android:textSize="15sp"
+            android:layout_margin="10dp"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/usbDevice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="USB Device: "
+            android:textSize="15sp"
+            android:layout_margin="10dp"
+            android:textColor="@color/black" />
     </LinearLayout>
 </FrameLayout>
