--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,38 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:opencv="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="org.opencv.android.CameraActivity">
+    tools:context=".MainActivity">
 
-    <org.opencv.android.JavaCamera2View
+    <androidx.camera.view.PreviewView
+        android:id="@+id/viewFinder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/View"
-        android:visibility="visible"
-        opencv:camera_id="any"
-        opencv:show_fps="true" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_percent="0.8" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_percent="0.8" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.3"
         android:orientation="vertical"
-        android:layout_gravity="bottom"
-        android:background="@color/cardview_light_background">
-
-        <TextView
-            android:id="@+id/counter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Counter"
-            android:textSize="11sp"
-            android:layout_margin="5dp"
-            android:textColor="@color/black" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.2">
 
         <TextView
             android:id="@+id/usbStatus"
@@ -61,5 +53,15 @@
             android:layout_margin="5dp"
             android:textColor="@color/black" />
 
+        <TextView
+            android:id="@+id/usbReceive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Receive Status:"
+            android:textSize="11sp"
+            android:layout_margin="5dp"
+            android:textColor="@color/black" />
+
     </LinearLayout>
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
